--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,9 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "hash_map": "cpp",
+        "iomanip": "cpp",
+        "numbers": "cpp"
     }
 }
